--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <%- include("./partials/navbar.ejs") %>
 <body>
     <div class="container mt-5 pt-4">
-        <h1 class="mt-4 mb-4 text-center"><strong>Painel Administrativo - RAMB</strong></h1>
+        <h1 class="mt-4 mb-4 text-center"><strong>Painel Administrativo - Rede Sem Fronteiras</strong></h1>
         <div class="alert alert-info" role="alert">
             Bem-vindo(a) ao painel administrativo! Aqui você pode gerenciar instituições, migrantes, formulários e mais. Explore as seções abaixo para acessar cada página ou navegue pelo menu.
         </div>
