--- a/views/migrants/migrantCreate.ejs
+++ b/views/migrants/migrantCreate.ejs
@@ -171,7 +171,7 @@
             <h3 class="mt-5 mb-3 text-primary">
                 <i class="bi bi-lock-fill"></i> Senha do migrante
             </h3>
-            <p>Esta senha será usada juntamente com o e-mail cadastrado para acessar o aplicativo <strong>RAMB</strong>.</p>
+            <p>Esta senha será usada juntamente com o e-mail cadastrado para acessar o aplicativo <strong>Rede Sem Fronteiras</strong>.</p>
             <div class="form-group">
                 <label for="password">Senha*</label>
                 <div class="input-group">
