--- a/views/users/userUpdatePassword.ejs
+++ b/views/users/userUpdatePassword.ejs
@@ -5,13 +5,13 @@
         <br>
         <br>
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <strong> <i class="bi bi-exclamation-triangle"></i> ATENÇÃO!</strong> Certifique-se de que você está alterando a senha do usuário correto. 
+            <strong> <i class="bi bi-exclamation-triangle"></i> ATENÇÃO!</strong> Certifique-se de que você está alterando a senha do administrador correto. 
         </div>
         <% if (typeof user_edit !== 'undefined') { %>
             <!-- Informações do Usuário -->
             <div class="card mt-3">
                 <div class="card-header bg-primary text-white">
-                    <i class="bi bi-person-fill me-2"></i> Informações do Usuário
+                    <i class="bi bi-person-fill me-2"></i> Informações do Administrador
                 </div>
                 <div class="card-body">
                     <div class="row">
@@ -19,16 +19,16 @@
                             <p><strong>Nome Completo:</strong> <%= user_edit.name %></p>
                             <p><strong>Email:</strong> <%= user_edit.email %></p>
                             <% if(user_edit.role === 'admin') { %>
-                                <p><strong>Função:</strong> Administrador</p>
+                                <p><strong>Função:</strong> Super Administrador</p>
                             <% } %>
                             <% if(user_edit.role === 'user') { %>
-                                <p><strong>Função:</strong> Usuário</p>
+                                <p><strong>Função:</strong> Administrador</p>
                             <% } %>
                         </div>
                     </div>
                 </div>
             </div>
-            <h3 class="mt-3 mb-3">Alterar Senha do Usuário</h3>
+            <h3 class="mt-3 mb-3">Alterar Senha do Administrador</h3>
             <form action="/dashboard/users/updatePassword" method="POST">
                 <div class="form-group">
                     <label for="newPassword">Nova Senha*</label>
