--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -35,14 +35,14 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/dashboard/users">
-                        Gestão de Usuários
+                        Gestão de Administradores
                     </a>
                 </li>
             <% } %>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item d-flex align-items-center mr-3">
-                <span class="navbar-text text-light">Version 1.0.0</span>
+                <span class="navbar-text text-light">Version 1.1.0</span>
             </li>
             <li class="nav-item mr-2">
                 <button class="btn btn-outline-light rounded-pill d-flex align-items-center me-3" data-toggle="modal" data-target="#accountModal">
@@ -79,9 +79,9 @@
                     <% } %> 
                 
                     <% if(user.role === 'admin') { %>
-                        <p><strong>Função:</strong> Administrador</p>
+                        <p><strong>Função:</strong> Super Administrador</p>
                     <% } else if(user.role === 'user') { %>
-                        <p><strong>Função:</strong> Usuário</p>
+                        <p><strong>Função:</strong> Administrador</p>
                     <% } else { %>
                         <p><strong>Função:</strong> Não Disponível</p>
                     <% } %> 
