--- a/views/users/userEdit.ejs
+++ b/views/users/userEdit.ejs
@@ -5,7 +5,7 @@
     <br>
     <div class="container mt-5 mb-5">
         <h1 class="mt-4 mb-3 text-primary">
-            <i class="bi bi-pencil-square"></i> Editar Usuário
+            <i class="bi bi-pencil-square"></i> Editar Administrador
         </h1>
         <form action="/dashboard/users/update" method="POST">
             <input type="hidden" name="user_id" value="<%= user.id %>">
@@ -22,12 +22,12 @@
                 <label for="role">Função*</label>
                 <select class="form-control" id="role" name="role" required>
                     <option value="" disabled>Selecione uma função</option>
-                    <option value="admin" <%= user.role === 'admin' ? 'selected' : '' %>>Administrador</option>
-                    <option value="user" <%= user.role === 'user' ? 'selected' : '' %>>Usuário</option>
+                    <option value="admin" <%= user.role === 'admin' ? 'selected' : '' %>>Super Administrador</option>
+                    <option value="user" <%= user.role === 'user' ? 'selected' : '' %>>Administrador</option>
                 </select>
             </div>
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                A função de <strong>Administrador</strong> tem acesso total ao sistema, podendo realizar todas as operações. Já a função de <strong>Usuário</strong> tem acesso restrito. 
+                A função de <strong>Super Administrador</strong> tem acesso total ao sistema, podendo realizar todas as operações. Já a função de <strong>Administrador</strong> tem acesso restrito. 
             </div>
             <div class="form-group">
             <!-- Alerta para validação -->
