--- a/views/users/userList.ejs
+++ b/views/users/userList.ejs
@@ -3,10 +3,10 @@
     <%- include("../partials/navbar.ejs") %>
     <div class="container mt-4">
         <br><br>
-        <h1 class="mt-4"><strong>Gestão de Usuários</strong></h1>
+        <h1 class="mt-4"><strong>Gestão de Administradores</strong></h1>
         <br>
         <a href="/dashboard/user/register" class="btn btn-primary mb-3">
-            <i class="bi bi-person-plus-fill"></i> Criar Usuário
+            <i class="bi bi-person-plus-fill"></i> Criar Administrador
         </a>
         
         <% if (successMessage && successMessage != "") { %>
