--- a/views/migrants/migrantUpdatePassword.ejs
+++ b/views/migrants/migrantUpdatePassword.ejs
@@ -18,9 +18,9 @@
                         <div class="col-md-6">
                             <p><strong>Nome Completo:</strong> <%= migrant.full_name %></p>
                             <p><strong>Email:</strong> <%= migrant.email %></p>
-                            <p><strong>Endereço:</strong> <%= migrant.Address.street %>, <%= migrant.Address.neighborhood %>, 
-                                <%= migrant.Address.city %> - <%= migrant.Address.state %>, nº <%= migrant.address_number %> 
-                                <%= migrant.address_complement ? ', ' + migrant.address_complement : '' %>, CEP: <%= migrant.Address.cep %>
+                            <p><strong>Endereço:</strong> <%= migrant.address.street %>, <%= migrant.address.neighborhood %>, 
+                                <%= migrant.address.city %> - <%= migrant.address.state %>, nº <%= migrant.address_number %> 
+                                <%= migrant.address_complement ? ', ' + migrant.address_complement : '' %>, CEP: <%= migrant.address.cep %>
                             </p>
                         </div>
                         <div class="col-md-6">
